# vswe

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/commands/: cdk-preflight.md
backend/: .build-timestamp  .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: context.py  orchestrator.py  permissions.py  phases.py  system_prompts.py  tools.py
backend/app/api/: auth.py  config_routes.py  costs.py  jobs.py  messages.py  sessions.py  websocket.py
backend/app/cost/: __init__.py  budget.py  pricing.py  tracker.py
backend/app/db/: dynamo.py  models.py
backend/app/github_app/: auth.py  client.py
backend/app/jobs/: instance_catalog.py  profiler.py  scheduler.py  spot_prices.py
backend/app/llm/: anthropic_client.py  models.py  openai_client.py  router.py
backend/app/webhooks/: consumer.py  github_handler.py  local_handler.py  processor.py  signature.py
backend/lambda/webhook/: handler.py
backend/tests/: conftest.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/scripts/: deploy.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useCosts.ts  useSessions.ts  useWebSocket.ts
frontend/src/lib/: api.ts  models.ts  websocket.ts
frontend/src/stores/: authStore.ts  sessionStore.ts
infrastructure/cdk/: app.py  cdk.context.json  requirements.txt
scripts/: push-secrets-to-ssm.sh
training/: Dockerfile  setup.py
training/vswe_checkpoint/: __init__.py  manager.py  metrics.py  runner.py  spot_monitor.py
(+32 files in other folders)
